# ckanext-onboarding-theodoro-bertol

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/onboarding_theodoro_bertol/: plugin.py
ckanext/onboarding_theodoro_bertol/assets/: script.js  webassets.yml
ckanext/onboarding_theodoro_bertol/lib/: helpers.py
ckanext/onboarding_theodoro_bertol/logic/: action.py  auth.py
ckanext/onboarding_theodoro_bertol/templates/: header.html  my_custom_template.html
ckanext/onboarding_theodoro_bertol/templates/admin/: base.html  reviewers.html
ckanext/onboarding_theodoro_bertol/templates/package/: read.html  read_http.html
ckanext/onboarding_theodoro_bertol/templates/reviews/: list.html
ckanext/onboarding_theodoro_bertol/templates/snippets/: package_item.html
ckanext/onboarding_theodoro_bertol/tests/: test_auth.py  test_helpers.py  test_plugin.py  test_review_actions.py
ckanext/onboarding_theodoro_bertol/views/: admin.py  dataset.py  home.py  reviews.py
