[project]
name = "ckanext-onboarding-theodoro-bertol"
version = "0.0.1"
description = "onboarding tech ckan extension"
readme = "README.md"
authors = [
    {name = "Theo-Bertol", email = "theodoro.bertol@datopian.com"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "extension", "onboarding", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/Abeelha/ckanext-onboarding-theodoro-bertol"

[project.entry-points."ckan.plugins"]
onboarding_theodoro_bertol = "ckanext.onboarding_theodoro_bertol.plugin:OnboardingTheodoroBertolPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
